--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://hugo-paper.vercel.app/
+baseURL: https://idelsonmindo.com/
 author: Steve Francia
 copyright: Copyright © 2008–2019, Steve Francia and the lee.so; all rights reserved.
 paginate: 3
