--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "http://idelsonmindo/"
+baseURL:  https://idelsonmindo.com/
 author: Idelson Mindo
 copyright: Copyright © 2008–2019, Steve Francia and the lee.so; all rights reserved.
 paginate: 3
